# fixfirst-edge

./: .env.example  .gitignore  ARCHITECTURE.md  CODEX_BRIEF.md  DEMO.md  LICENSE  README.md  ROADMAP.md  SUBMISSION.md  docker-compose.yml  start.sh  stop.sh
.github/workflows/: ci.yml  deploy-landing-pages.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py  schemas.py
backend/app/pipelines/: audio_transcriber.py  csv_loader.py  identifier_extractor.py  image_embedder.py  pdf_chunker.py  text_embedder.py
backend/app/routers/: diagnose.py  health.py  ingest.py  search.py
backend/app/services/: diagnose_service.py  ingest_service.py  search_service.py
backend/scripts/: bench_diagnose.py  bulk_ingest.py  pull_actian.sh  verify_offline.py
backend/tests/: test_api.py  test_audio_transcriber.py  test_csv_loader.py  test_db.py  test_diagnose.py  test_e2e_diagnose.py  test_identifier_extractor.py  test_image_embedder.py  test_pdf_chunker.py  test_text_embedder.py
data/fixtures/: error_codes.csv  incidents.csv  parts.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DiagnosePanel.tsx  FilterPanel.tsx  OfflineBanner.tsx  ResultCard.tsx  SaveIncidentModal.tsx  SearchBar.tsx  UploadZone.tsx
frontend/lib/: api.ts
landing/: CNAME  index.html  nginx-pre-ssl.conf  nginx.conf
scripts/: check_submission_readiness.py  gen_demo_assets.py
